Update 5.0 Asynchronous resets.md

--- a/5.0 Asynchronous resets.md
+++ b/5.0 Asynchronous resets.md
@@ -85,3 +85,56 @@ endmodule
 
 ## 5.3 Преимущества асинхронных сбросов
 Наибольшее преимущество использования асинхронных сбросов заключается в том, что, пока в библиотеке поставщика есть асинхронно сбрасываемые триггеры, путь данных гарантированно будет чистым. Проекты, работающие на пределе таймингов путей данных, не могут позволить себе добавлять вентили и дополнительные задержки в цепи данных из-за логики, вставленной для обработки синхронных сбросов. Используя асинхронный сброс, разработчик гарантированно не добавит сброс в путь данных. Код в примере 7 предполагает асинхронные сбросы, которые не будут добавлены в путь данных.
+
+
+```Verilog
+module ctr8ar (
+  output reg [7:0] q,
+  output reg       co,
+  input      [7:0] d,
+  input            ld, rst_n, clk);
+  
+  always @(posedge clk or negedge rst_n)
+    if      (!rst_n) {co,q} <= 9'b0;     // async reset
+    else if (ld)     {co,q} <= d;        // sync load
+    else             {co,q} <= q + 1'b1; // sync increment
+endmodule
+```
+<p align=center> Пример 7a — Код Verilog-2001 для загружаемого счетчика с асинхронным сбросом </br></br></p>
+
+```VHDL
+library ieee;
+use ieee.std_logic_1164.all;
+use ieee.std_logic_unsigned.all;
+entity ctr8ar is
+  port (
+  clk      : in std_logic;
+  rst_n    : in std_logic;
+  d        : in std_logic;
+  ld       : in std_logic;
+  q        : out std_logic_vector(7 downto 0);
+  co       : out std_logic);
+end ctr8ar;
+
+architecture rtl of ctr8ar is
+  signal count : std_logic_vector(8 downto 0);
+begin
+  co <= count(8);
+  q <= count(7 downto 0);
+  
+  process (clk)
+  begin
+    if (rst_n = '0') then
+      count <= (others => '0');       -- sync reset
+      elsif (clk'event and clk = '1') then
+        if (ld = '1') then
+          count <= '0' & d;           -- sync load
+        else
+          count <= count + 1;         -- sync increment
+      end if;
+    end if;
+  end process;
+end rtl;
+```
+<p align=center> Пример 7b — Код VHDL для загружаемого счетчика с асинхронным сбросом </br></br></p>
+
