Update 5.0 Asynchronous resets.md

--- a/5.0 Asynchronous resets.md
+++ b/5.0 Asynchronous resets.md
@@ -1,6 +1,6 @@
 # 5. Асинхронный сброс
 Неправильная реализация асинхронного сброса в цифровой логической схеме может привести к серьёзным сбоям в работе.  
-
+ 
 Многим инженерам нравится идея возможности применить сброс к своей схеме и перевести логику в известное состояние. Cамая большая проблема с асинхронным сбросом — это сброс сброса, также называемый снятием сброса. Эта тема будет подробно рассмотрена в разделе 6.0.  
 
 Триггеры с асинхронным сбросом имеют вывод сброса в своей конструкции. Вывод сброса обычно имеет активный низкий уровень (триггер переходит в состояние сброса, когда сигнал, подключённый к выводу сброса триггера,переходит на логический низкий уровень).
@@ -138,3 +138,24 @@ end rtl;
 ```
 <p align=center> Пример 7b — Код VHDL для загружаемого счетчика с асинхронным сбросом </br></br></p>
 
+<p align="center" width="100%">
+  <img width="50%" src=".pic/async_rst.png">    
+</p>
+<p align=center> Рисунок 7 — Загружаемый счетчик с асинхронным сбросом </p>
+
+Еще одним преимуществом асинхронного сброса является то, что схему можно сбросить как при наличии тактового сигнала, так и без него.
+
+Опыт авторов показывает, что при использовании стиля кодирования для асинхронных сбросов, описанного в этом разделе, интерфейс синтеза, как правило, становится автоматическим. То есть, как правило, нет необходимости добавлять какие-либо атрибуты синтеза для реализации триггера с асинхронным выводом сброса.
+
+## 5.3 Недостатки асинхронных сбросов
+Инженеры приводят множество причин, почему асинхронные сбросы — это зло.
+
+Руководство по методологии повторного использования (RMM) рекомендует не использовать асинхронные сбросы, потому что их нельзя использовать с симуляторами, основанными на циклах. Это просто неверно. Основа симулятора, основанного на циклах, заключается в том, что все входные сигналы изменяются по фронту тактового сигнала. Поскольку синхронизация не является частью моделирования, основанного на циклах, асинхронный сброс можно просто применить по неактивному фронту тактового сигнала.
+
+Для DFT (design for test, проектирование для тестирования), если асинхронный сброс не управляется напрямую с контакта ввода/вывода, то цепь сброса от драйвера сброса должна быть отключена для сканирования и тестирования DFT. Это необходимо для схемы синхронизатора, показанной в разделе 6.
+
+Некоторые разработчики утверждают, что статический временной анализ очень сложно проводить в проектах, использующих асинхронные сбросы. Дерево сброса должно быть рассчитано как для синхронного, так и для асинхронного сброса, чтобы гарантировать, что сброс может произойти в течение одного тактового периода. Временной анализ для дерева сброса должен выполняться после компоновки, чтобы гарантировать выполнение этого временного требования. Этот временной анализ можно исключить, если в проекте используется распределенное дерево триггеров синхронизатора сброса, обсуждаемое в разделе 8.2.
+
+Самая большая проблема с асинхронными сбросами заключается в том, что они асинхронны, как при установлении, так и при снятии сигнала сброса. Установка сигнала не имеет значения, проблема — снятие сигнала. Если асинхронный сброс происходит на активном фронте тактового сигнала триггера или вблизи него, выход триггера может стать метастабильным, и, следовательно, состояние сброса ASIC может быть потеряно.
+
+Другая проблема, которая может возникнуть при асинхронном сбросе, в зависимости от его источника, — это ложные сбросы, из-за шума или сбоев на плате или системного сброса. Возможное решение сбоев сброса см. в разделе 8.0. Если это реальная проблема в системе, то можно подумать, что решение — синхронный сброс. Другая, но похожая проблема существует для синхронных сбросов: если эти ложные импульсы сброса возникают вблизи фронта тактового сигнала, триггеры всё равно могут стать метастабильными (но это справедливо для любых входных данных, нарушающих временные требования).
