Update 6.0 Asynchronous reset problem.md

--- a/6.0 Asynchronous reset problem.md
+++ b/6.0 Asynchronous reset problem.md
@@ -6,4 +6,8 @@
 
 Как показано на рисунке 8, асинхронный сигнал сброса будет снят асинхронно с тактовым сигналом. В этом сценарии есть две потенциальные проблемы: 1 - нарушение времени восстановления (recovery) сброса и 2 - снятие сброса (removal) в разных тактовых циклах для разных последовательных элементов.
 
+<p align="center" width="100%">
+  <img width="50%" src=".pic/rec_rem.png">    
+</p>
+<p align=center> Рисунок 8 — Проблема времени восстановления при асинхронном сбросе </p>
 
