Update 6.0 Asynchronous reset problem.md

--- a/6.0 Asynchronous reset problem.md
+++ b/6.0 Asynchronous reset problem.md
@@ -11,3 +11,12 @@
 </p>
 <p align=center> Рисунок 8 — Проблема времени восстановления при асинхронном сбросе </p>
 
+
+## 6.1 Время восстановления сигнала сброса
+
+Время восстановления после сброса относится к времени между моментом снятия сигнала сброса и моментом, когда тактовый сигнал снова становится высоким. Стандарт Verilog-2001 [29] содержит три встроенные команды для моделирования и тестирования времени восстановления и проверки времени снятия сигнала: $recovery, $removal и $recrem (последняя представляет собой комбинацию проверок времени восстановления и снятия сигнала).Время восстановления также называется временем установки tsu и имеет вид «PRE or CLR inactive setup
+time before CLK ↑» [1]. Пропуск времени восстановления может привести к проблемам с целостностью сигнала или метастабильностью выходных данных.
+
+## 6.2 Снятие сброса, проходящее через разные такты
+
+Если снятие сброса происходит асинхронно с нарастающим фронтом тактового сигнала, небольшие различия в задержках распространения сигнала сброса и тактового сигнала, или обоих, могут привести к тому, что некоторые регистры или триггеры выйдут из состояния сброса раньше других.
