Update 7.0 Reset synchronizer.md

--- a/7.0 Reset synchronizer.md
+++ b/7.0 Reset synchronizer.md
@@ -1,3 +1,6 @@
 # 7.0 Синхронизаторы сброса
 
 # КАЖДАЯ ASIC, ИСПОЛЬЗУЮЩАЯ АСИНХРОННЫЙ СБРОС, ДОЛЖНА ВКЛЮЧАТЬ В СЕБЯ СХЕМУ СИНХРОНИЗАЦИИ СБРОСА!!
+
+Без синхронизатора сброса асинхронный сброс в итоговой системе бесполезен, даже если сброс работает во время моделирования. Логика синхронизатора сброса на рисунке 9 разработана таким образом, чтобы использовать преимущества как асинхронного, так и синхронного стилей сброса.
+
