--- a/7.0 Reset synchronizer.md
+++ b/7.0 Reset synchronizer.md
@@ -4,3 +4,7 @@
 
 Без синхронизатора сброса асинхронный сброс в итоговой системе бесполезен, даже если сброс работает во время моделирования. Логика синхронизатора сброса на рисунке 9 разработана таким образом, чтобы использовать преимущества как асинхронного, так и синхронного стилей сброса.
 
+<p align="center" width="100%">
+  <img width="50%" src=".pic/reset_sync.png">    
+</p>
+<p align=center> Рисунок 9 — Блок-схема синхронизатора сброса  </p>
